--- a/west-site/package.json
+++ b/west-site/package.json
@@ -9,6 +9,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/vue-fontawesome": "^3.0.2",
     "@mdi/font": "5.9.55",
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
